update(kratos-web): WIP desktop sidebar; fix overflow in tab bar

--- a/apps/kratos-web/src/styles/colors.scss
+++ b/apps/kratos-web/src/styles/colors.scss
@@ -17,8 +17,9 @@
         --card: 0 0% 100%;
         --card-foreground: 222.2 47.4% 11.2%;
 
-        --primary: 222.2 47.4% 11.2%;
-        --primary-foreground: 210 40% 98%;
+        --primary: 164 80% 90%;
+        --primary-foreground: 164 85% 50%;
+        /* --primary-foreground: 164 85% 62%; */
 
         --secondary: 210 40% 96.1%;
         --secondary-foreground: 222.2 47.4% 11.2%;
